--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,6 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "options_page": "options.html",
   "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
@@ -25,11 +24,8 @@
       "js": ["content.js"]
     }
   ],
-  "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
-  },
+  "web_accessible_resources": [
+    "features_script.js"
+  ],
   "manifest_version": 2
 }
